--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -864,8 +864,12 @@ td.delete label,
     margin-right: 5px;
 }
 
-.history-info span {
-    margin-left: 5px;
+.history-info>span {
+    margin-left: 8px;
+}
+
+.history-info>span:nth-child(2) {
+    margin-left: 2px;
 }
 
 #history-table-search {
