--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -1189,7 +1189,6 @@ td.delete label,
     width: 400px;
 }
 
-
 #modal_item_files .input-group input {
     width: auto;
     display: inline-block;
@@ -1200,10 +1199,13 @@ td.delete label,
     border-right-width: 0;
 }
 
-#modal_item_files h4 {
+#modal_item_files h4,
+#history_script_log h4 {
     width: 90%;
     overflow: hidden;
     height: 1.3em;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 #modal_item_files hr {
@@ -1245,7 +1247,6 @@ td.delete label,
     text-align: left;
     margin-left: 80px;
     margin-top: 2px;
-    
 }
 
 #modal_item_files .item-files-table .progress small {
@@ -1264,8 +1265,6 @@ td.delete label,
 #modal_item_files .item-files-table input[type="checkbox"] {
     margin-left: 8px;
 }
-
-
 
 /* RETRY JOB MODAL */
 #modal_retry_job .form-group {
@@ -1293,6 +1292,14 @@ td.delete label,
 
 #history_script_log code {
     background: none;
+}
+
+#history_script_log pre,
+#history_script_log code {
+    padding: 0;
+    background: 0;
+    margin: 0;
+    border: 0;
 }
 
 /***
@@ -1357,7 +1364,8 @@ td.delete label,
         margin-top: 80px;
     }
     
-    #modal_options .modal-dialog {
+    #modal_options .modal-dialog,
+    #history_script_log .modal-dialog {
         margin-top: 30px;
     }
 }
