--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -169,7 +169,7 @@ li.dropdown {
 }
 
 .active-on-queue-finish-menu,
-.queue-error-no-diskspace {
+.queue-error-info {
     color: red !important;
 }
 
@@ -591,7 +591,7 @@ td.delete label,
     clear: both;
     width: 100%;
     overflow: auto;
-    max-height: 200px;
+    max-height: 180px;
     margin-bottom: 5px;
 }
 
