Correctly display long server-names in Config

--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -1497,7 +1497,9 @@ button.ui-button::-moz-focus-inner {
     vertical-align: middle;
     margin: 0;
     font-size: 1.4em;
-
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .example {
     background-color: #fefeee;
