Fancy file button in retry dialog of Glitter

--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -1268,6 +1268,10 @@ td.delete label,
     margin-bottom: 10px !important;
 }
 
+#modal_retry_job .input-group-addfile {
+    width: 100%;
+}
+
 /* SCRIPT LOG MODAL */
 #history_script_log .modal-dialog {
     width: auto !important;
@@ -1353,7 +1357,8 @@ td.delete label,
     /* Only for AddNZB and AboutModals */
     #modal_add_nzb .modal-dialog,
     #modal_help .modal-dialog,
-    #modal_purge_history .modal-dialog {
+    #modal_purge_history .modal-dialog,
+    #modal_retry_job .modal-dialog {
         margin-top: 80px;
     }
     
