--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -364,7 +364,12 @@
                     <input type="hidden" name="retry_job_id" />
                     <fieldset>
                         <legend>$T('opt-extra-NZB')</legend>
-                        <input type="file" name="nzbFile" class="form-control" id="nzbfile" data-toggle="tooltip" data-placement="bottom" title="$T('Glitter-nzbFormats')" />
+                        <div class="input-group input-group-addfile" data-toggle="tooltip" data-placement="bottom" title="$T('Glitter-nzbFormats')">
+                            <label class="btn btn-default btn-file">
+                                <span class="glyphicon glyphicon-file"></span> <em>$T('Glitter-chooseFile')&hellip;</em>
+                                <input type="file" name="nzbFile" class="form-control" id="file" data-bind="event : { change: updateBrowseLabel }" />
+                            </label>
+                        </div>
                     </fieldset>
                     <fieldset>
                         <legend>$T('Glitter-unpackPassword')</legend>
