Pagination fix, human-readable queue size left

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -165,7 +165,7 @@
                     <!-- ko if: (queueDataLeft() != '')  -->
                     <div class="info-container-box">
                         <span class="glyphicon glyphicon-save"></span>
-                        <span data-bind="text: queueDataLeft"></span> MB $T('Glitter-left')
+                        <span data-bind="text: queueDataLeft"></span> $T('Glitter-left')
                     </div>
                     <!-- /ko -->
                     <!-- ko if: (quotaLimit() != 0)  -->
