Adding age on queue hover

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -238,6 +238,7 @@
                                 <div class="name-options" data-bind="visible: !editingName()">
                                     <a href="#" data-bind="click: editName" class="hoverbutton"><span class="glyphicon glyphicon-pencil"></span></a>
                                     <a href="#" data-bind="click: showFiles" class="hoverbutton"><span class="glyphicon glyphicon-folder-open"></span></a>
+                                    <small data-bind="text: avg_age"></small>
                                 </div>
                             </td>
                             <td class="progress-indicator">
