--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -366,6 +366,10 @@ td.name .row-wrap-text {
     display: none;
 }
 
+.queue-table td.name .name-options small {
+    opacity: 0.5;
+}
+
 .queue-table td.name:hover .row-wrap-text {
     max-width: 90%;
  /* Change for each size! */;
@@ -1318,7 +1322,7 @@ td.delete label,
 
 @media screen and (max-width: 1200px) {
     .queue-table td.name:hover .row-wrap-text {
-        max-width: 85%;
+        max-width: 77%;
     }
 }
 
@@ -1330,6 +1334,10 @@ td.delete label,
 
     .queue-table td.name:hover .row-wrap-text {
         max-width: 80%;
+    }
+    
+    .queue-table td.name .name-options small {
+        display: none;
     }
     
     .history-info {
