--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -341,8 +341,23 @@ tbody>tr>td:last-child {
     margin-right: 2px;
 }
 
-.info-container a {
-    margin-left: 8px;
+.info-container .info-container-box-sorting {
+    float: right;
+}
+
+.info-container .info-container-box-sorting a {
+    padding-left: 12px;
+}
+
+.info-container .info-container-box-sorting .dropdown-menu {
+    left: auto;
+    right: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.info-container .info-container-box-sorting .dropdown-menu small {
+    color: #AAA;
 }
 
 .queue-table td.name,
@@ -441,8 +456,11 @@ td.delete .dropdown>a {
     padding: 0px 10px;
 }
 
-td.delete input[type="checkbox"] {
+td.delete input[type="checkbox"],
+.add-nzb-inputbox-options input[type="checkbox"]{
     margin: 0;
+    margin-bottom: -2px;
+    display: block;
 }
 
 td.delete label,
@@ -540,7 +558,7 @@ td.delete label,
 }
 
 .multioperations-selector .add-nzb-inputbox-small {
-    width: 50px;
+    width: 60px;
     float: right;
     padding-left: 0;
     padding-top: 2px;
@@ -562,32 +580,15 @@ td.delete label,
     opacity: 1;
 }
 
-.multioperations-selector .add-nzb-inputbox-small label[for="multiedit-pause"],
-  .multioperations-selector .add-nzb-inputbox-small label[for="multiedit-play"] {
-    padding-left: 6px;
+.multioperations-selector .add-nzb-inputbox-options {
+    width: auto;
     padding-right: 6px;
 }
 
-.multioperations-selector .add-nzb-inputbox-tiny {
-    width: 20px;
-}
-
-.multioperations-selector .add-nzb-inputbox-tiny>a {
-    margin-left: -4px;
-    margin-top: 1px;
-    display: inline-block;
-}
-
-.multioperations-selector .add-nzb-inputbox-tiny .dropdown-menu {
-    margin-left: -110px;
-}
-
-.multioperations-selector .add-nzb-inputbox-tiny.open a {
-    opacity: 1;
-}
-
-.multioperations-selector .add-nzb-inputbox-tiny small {
-    color: #AAA;
+.multioperations-selector .add-nzb-inputbox-small label[for="multiedit-pause"],
+.multioperations-selector .add-nzb-inputbox-small label[for="multiedit-play"] {
+    padding-left: 6px;
+    padding-right: 6px;
 }
 
 /* WARNINGS */
