--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -125,8 +125,8 @@
               <td><label for="enable_$server">&nbsp;$T('enabled')</label></td>
             </tr></table>
             
-            <button type="button" class="btn btn-default clrServer">$T('button-clrServer')</button>
-            <button type="button" class="btn btn-default showserver">$T('showDetails')</button>
+            <button type="button" class="btn btn-default showserver"><span class="glyphicon glyphicon-pencil"></span> $T('showDetails')</button>
+            <button type="button" class="btn btn-default clrServer"><span class="glyphicon glyphicon-remove"></span> $T('button-clrServer')</button>  
         </div><!-- /col2 -->
             <div class="col1"  style="display:none;">
             <fieldset>
