--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -2128,6 +2128,10 @@ input[type="checkbox"] {
     cursor: pointer;
 }
 
+.Servers .col2 button:first-of-type {
+    margin-bottom: 8px;
+}
+
 .Special .glyphicon-asterisk {
     margin-left: 8px;
     top: 3px;
