Showing 'Default' instead of *

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -267,7 +267,7 @@
                 <div class="clearfix"></div>
                 <div class="add-nzb-inputbox" title="$T('category')" data-toggle="tooltip" data-placement="left">
                     <span class="glyphicon glyphicon-tag"></span>
-                    <select name="Category" class="form-control" data-bind="options: queue.categoriesList, optionsCaption: '$T('default')'"></select>
+                    <select name="Category" class="form-control" data-bind="options: queue.categoriesList, optionsValue: 'catValue', optionsText: 'catText',"></select>
                 </div>
                 <div class="add-nzb-inputbox" title="$T('priority')" data-toggle="tooltip" data-placement="left">
                     <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
