--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -360,6 +360,10 @@ tbody>tr>td:last-child {
     color: #AAA;
 }
 
+.queue-table td.name {
+    padding-left: 0;
+}
+
 .queue-table td.name,
 .queue-table td.progress-indicator {
     cursor: move;
@@ -386,7 +390,7 @@ td.name .row-wrap-text {
 }
 
 .queue-table td.name:hover .row-wrap-text {
-    max-width: 85%;
+    max-width: 83%;
  /* Change for each size! */
 }
 
@@ -468,6 +472,15 @@ td.delete label,
     margin: -5px;
     padding: 5px 12px 5px 10px;
     cursor: pointer;
+}
+
+tr.queueitem>td:first-child {
+    padding: 0;
+}
+
+tr.queueitem>td:first-child>a {
+    display: block;
+    padding: 5px 10px;
 }
 
 .queueitem-settings {
@@ -877,6 +890,7 @@ td.delete label,
 #history-table-search input {
     width: 130px;
     transition: width 0.2s ease-out;
+    border: 1px solid #dddddd;
     box-shadow: none;
     -webkit-box-shadow: none;
 }
@@ -891,7 +905,7 @@ td.delete label,
     position: absolute;
     right: 10px;
     top: 10px;
-    opacity: 0.8;
+    opacity: 0.7;
     z-index: 999;
 }
 
@@ -1620,7 +1634,6 @@ legend {
     -webkit-transform: scale(1) !important;
     opacity: 1 !important;
 }
-
 
 button[data-dismiss="modal"] {
     background-color: #F0F0F0;
