--- a/interfaces/Glitter/templates/static/stylesheets/glitter.mobile.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.mobile.css
@@ -122,6 +122,10 @@ h2 {
     max-width: 70% !important;
 }
 
+tr.queueitem>td:first-child>a {
+    margin-top: 3px;
+}
+
 /* For Iphone 4/5 */
 @media only screen and (max-width : 320px) {
     .queue-table td.name .row-wrap-text {
